# supply-chain-allocation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_example.sh  setup.py
config/: evaluators.json
data/: README.md
data/dummy/: hazmat_rules.csv  node-node_complex.csv  node-node_simple.csv  nodes_complex.csv  nodes_simple.csv  ocean_rates.csv  products_large.csv  products_medium.csv  products_small.csv  shipping_times.csv  warehouse_rates.csv
data/examples/: node-node.csv  nodes.csv  products.csv
docs/: Commits_Guide.md  Project_Brain.md
scripts/: analyze_results.py  batch_test.py  generate_test_data.py  run_tests.sh  visualize_network.py
src/: __init__.py  main.py
src/allocation/: __init__.py  allocator.py  path_evaluator.py
src/evaluators/: __init__.py  base.py  config_loader.py  simple.py
src/graph/: __init__.py  network_builder.py  path_finder.py
src/models/: __init__.py  evaluation.py  network.py  product.py
src/utils/: __init__.py  csv_loader.py  memoization.py
tests/: test_allocation.py  test_models.py
