[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-allocation"
version = "0.1.0"
description = "Inventory allocation engine for supply chain optimization"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.5.0",
    "networkx>=3.2.1",
    "pandas>=2.1.3",
    "numpy>=1.24.3",
    "click>=8.1.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0"
]